--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,23 @@ python = "^3.11"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.ruff]
+select = ["ALL"]
+fixable = ["ALL"]
+fix = true
+line-length = 79
+
+[tool.ruff.pycodestyle]
+max-doc-length = 72
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["E401"]  # Unused import
+
+
+[tool.black]
+line-length = 79
