Remove marketing terms from package description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pyper"
 version = "0.1.0"
-description = "Pyper is a Python package that offers powerful configuration management capabilities like the Viper package in Golang."
+description = "Pyper is a Python package that offers configuration management capabilities like the Viper package in Golang."
 authors = ["Leo Schleier <43878374+leoschleier@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
