--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,12 @@ packages = [{include = "pit", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
+black = "^23.10.1"
+ruff = "^0.1.3"
 
 [build-system]
 requires = ["poetry-core"]
@@ -47,6 +50,7 @@ pythonVersion = "3.11"
 
 [tool.ruff]
 select = ["ALL"]
+ignore = ["ANN401"]  # Use of typing.Any  
 fixable = ["ALL"]
 fix = true
 line-length = 79
