--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,11 +35,20 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
+[tool.black]
+line-length = 79
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
+typeCheckingMode = "strict"
+include = ["src", "tests"]
+pythonVersion = "3.11"
+
 [tool.ruff]
 select = ["ALL"]
-ignore = ["ANN101", "ANN102"]  # Type annotations for 'self' and 'cls'
 fixable = ["ALL"]
-fix = false
+fix = true
 line-length = 79
 target-version = "py311"
 
@@ -52,10 +61,6 @@ convention = "numpy"
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["E401"]  # Unused import
 "tests/*" = ["S101"]  # Use of assert detected
-
-
-[tool.black]
-line-length = 79
 
 
 [tool.pytest.ini_options]
