--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ pyyaml = "^6.0.1"
 pytest = "^7.4.2"
 black = "^23.10.1"
 ruff = "^0.1.3"
+mypy = "^1.8.0"
+types-pyyaml = "^6.0.12.12"
 
 [build-system]
 requires = ["poetry-core"]
@@ -40,6 +42,10 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 79
+
+[[tool.mypy.overrides]]
+module = "py"
+ignore_missing_imports = true
 
 [tool.pyright]
 venvPath = "."
