--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ black = "^23.10.1"
 ruff = "^0.1.3"
 mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
+pyright = "^1.1.344"
 
 [build-system]
 requires = ["poetry-core"]
