--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
-black = "^23.10.1"
 ruff = "^0.1.3"
 mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
@@ -57,7 +56,11 @@ pythonVersion = "3.11"
 
 [tool.ruff]
 select = ["ALL"]
-ignore = ["ANN401"]  # Use of typing.Any  
+ignore = [
+    "ANN401",  # Use of typing.Any  
+    "COM812",  # Missing trailing comma (formatter)
+    "ISC001",  # Single line implicit string concatenation (formatter)
+]
 fixable = ["ALL"]
 fix = true
 line-length = 79
